--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
 spring.profiles.include=db
